fixed style issue with search textarea on scriptures page not vertically aligning with its label

--- a/_dev/sass/site.scss
+++ b/_dev/sass/site.scss
@@ -185,6 +185,11 @@ body
             {
                 display: table-cell;
                 vertical-align: middle;
+                
+                textarea
+                {
+                    vertical-align: middle;   
+                }
             }
         }
     }
